--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 	"dependencies": {
 		"@fontsource-variable/roboto-mono": "^5.0.19",
 		"@fontsource-variable/roboto-slab": "^5.0.20",
+		"@sveltejs/vite-plugin-svelte": "3.1.2",
 		"@tailwindcss/typography": "^0.5.15",
 		"autoprefixer": "^10.4.20",
 		"feather-icons": "^4.29.2",
@@ -65,6 +66,5 @@
 		"tocbot": "^4.29.0",
 		"vscode-oniguruma": "^2.0.1",
 		"vscode-textmate": "^9.0.0"
-	},
-	"packageManager": "yarn@4.1.0"
+	}
 }
