contributor articles not appearing on contributor page

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"@iconify/svelte": "^4.0.2",
 		"@melt-ui/pp": "^0.3.2",
 		"@melt-ui/svelte": "^0.86.0",
+		"@skeletonlabs/skeleton": "^2.10.3",
+		"@skeletonlabs/tw-plugin": "^0.4.0",
 		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/kit": "^2.5.25",
 		"@types/swiper": "^5.4.3",
@@ -60,8 +62,7 @@
 		"feather-icons": "^4.29.2",
 		"flexsearch": "^0.7.43",
 		"postcss": "^8.4.49",
-		"shiki": "^1.6.1",
-		"shiki-es": "^0.14.0",
+		"shiki": "^1.23.1",
 		"svelte-toc": "^0.5.9",
 		"tocbot": "^4.29.0",
 		"vscode-oniguruma": "^2.0.1",
