feat(highlight): integrate highlight.js for improved code highlighting
Installed highlight.js to enhance the code highlighter component. Updated project dependencies to ensure compatibility and improved performance.

--- a/package.json
+++ b/package.json
@@ -14,40 +14,40 @@
 		"postbuild": "svelte-sitemap --domain https://torrust.com/"
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.2.3",
-		"@eslint/js": "^9.17.0",
+		"@eslint/compat": "^1.2.5",
+		"@eslint/js": "^9.18.0",
 		"@melt-ui/pp": "^0.3.2",
 		"@melt-ui/svelte": "^0.86.2",
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.15.2",
+		"@sveltejs/kit": "^2.15.3",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/dateformat": "^5.0.3",
-		"@types/node": "^22.10.5",
+		"@types/node": "^22.10.7",
 		"@types/prismjs": "^1.26.5",
-		"@typescript-eslint/eslint-plugin": "^8.19.1",
-		"@typescript-eslint/parser": "^8.19.1",
+		"@typescript-eslint/eslint-plugin": "^8.20.0",
+		"@typescript-eslint/parser": "^8.20.0",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.17.0",
+		"eslint": "^9.18.0",
 		"eslint-config-eslint": "^11.0.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-prettier": "^5.2.1",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-prettier": "^5.2.2",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.14.0",
 		"mdsvex": "^0.12.3",
 		"prettier": "^3.3.2",
-		"prettier-plugin-svelte": "^3.2.6",
-		"prettier-plugin-tailwindcss": "^0.6.5",
+		"prettier-plugin-svelte": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.10",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-external-links": "^3.0.0",
 		"rehype-slug": "^6.0.0",
-		"sass": "^1.83.1",
-		"svelte": "^5.17.1",
-		"svelte-check": "^4.0.0",
+		"sass": "^1.83.4",
+		"svelte": "^5.18.0",
+		"svelte-check": "^4.1.4",
 		"svelte-eslint-parser": "^0.43.0",
 		"svelte-sitemap": "^2.7.0",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0",
+		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0",
 		"vite-plugin-imagemin": "^0.6.1"
 	},
@@ -60,7 +60,9 @@
 		"@tailwindcss/typography": "^0.5.15",
 		"dateformat": "^5.0.3",
 		"flexsearch": "^0.7.43",
+		"highlight.js": "^11.11.1",
 		"reading-time": "^1.5.0",
+		"rehype-pretty-code": "^0.14.0",
 		"striptags": "^3.2.0"
 	}
 }
